--- a/index.html
+++ b/index.html
@@ -12,7 +12,21 @@
 	<!-- my css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
+
+	<div class="container">
+		<h1 id="TriviaTitle">Trivia Game</h1>
+		<br>
+		<br>
+		<br>
+		<div id="Timer"><br></div>
+		<div id="Question"><br></div>
+		<div id="a1" class="ans-button start">Start</div>
+		<div id="a2" class="ans-button"></div>
+		<div id="a3" class="ans-button"></div>
+		<div id="a4" class="ans-button"></div>
+	</div>
 
 	<!--jquery-->
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
