--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 	<div class="container">
-		<h1 id="TriviaTitle">Trivia Game</h1>
+		<h1 id="TriviaTitle">Florida Trivia Game!</h1>
 		<br>
 		<br>
 		<br>
