--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-	<div class="container">
+	<div class="container clearfix">
 		<h1 id="TriviaTitle">Florida Trivia Game!</h1>
 		<br>
 		<br>
